--- a/css/media.css
+++ b/css/media.css
@@ -5,7 +5,11 @@
 
  
 @media (max-width: 1200px) {
-  
+  .header__nav{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+  }
 
     .home__card{
         display: none;
@@ -22,10 +26,13 @@
 }
 @media (max-width: 1024px) {}
 @media (max-width: 992px) {}
-@media (max-width: 800px) {}
+@media (max-width: 800px) {
+    .footer__menu{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+}
 @media (max-width: 768px) {}
 @media (max-width: 684px) {}
 @media (max-width: 576px) {}
-@media (max-width: 414px) {}
-@media (max-width: 376px) {}
-@media (max-width: 320px) {}
